welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	{if (getX()==(largeur-1) && getY()==(hauteur-1)) {return true}
                                                                 ^ColumnByColumn:12: warning: enclosing method positionFinale has result type Unit: return value discarded
  	{if (getX()==(largeur-1) && getY()==(hauteur-1)) {return true}
                                                          ^ColumnByColumn:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
     else {return false}}
                  ^ColumnByColumn:13: warning: enclosing method positionFinale has result type Unit: return value discarded
     else {return false}}
           ^ColumnByColumn:25: error: value unary_! is not a member of Unit
  while (!positionFinale())
         ^